--- a/client/src/sass/urlshortenerform.module.scss
+++ b/client/src/sass/urlshortenerform.module.scss
@@ -35,6 +35,7 @@
 	outline: none;
 	padding-top: 1rem;
 	font-size: 1rem;
+	background: none;
 } 
 .label{
 	position: absolute;
@@ -89,4 +90,12 @@
 }
 .fail{
 	color: red;
+}
+
+@media only screen and (max-width: 450px){
+	.container{
+		width: 70%;
+		box-shadow: none;
+		box-shadow: 0px 0px 4px 0px #ccc;
+	}
 }
